123/MyProject/src/objects/sample__c.object
<CustomObject>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <label>time</label>
        <type>Date</type>
    </fields>
    <label>sample</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>